--- a/styles/main.css
+++ b/styles/main.css
@@ -668,4 +668,12 @@ body {
         gap: 16px;
         padding: 48px 16px;
     }
+    .footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer__links{
+        margin-top: 48px;
+    }
 }
